[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12"]

[dependency-groups]
dev = [
    "pdbpp>=0.12.1",
]
test = [
  "freezegun>=1.5.1",
  "inline-snapshot[black]>=0.19.3",
  "pytest>=8.3.4"
]

[project]
name = "polars-ls"
version = "0.5.4"
description = "List directory contents as Polars DataFrames"
readme = "README.md"
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
  "argh>=0.31.3",
  "polars>=1.30"
]

[project.optional-dependencies]
lts-cpu = ["polars[rtcompat]>=1.30"]

[project.scripts]
pols = "pols:cli.cli"

[project.urls]
# Documentation = "https://polars-ls.vercel.app/"
Homepage = "https://github.com/lmmx/polars-ls"
Repository = "https://github.com/lmmx/polars-ls.git"

[tool.ruff.lint]
ignore = ["E741"]

[tool.uv.build-backend]
module-name = "pols"
module-root = "src"
